# ex_data_sketch

./: .credo.exs  .formatter.exs  .gitignore  .tool-versions  CHANGELOG.md  INITIAL_PROMPT.md  LICENSE  README.md  RELEASE_v0.3.0.md  RELEASE_v0.4.0.md  RELEASE_v0.5.0.md  mix.exs
bench/: bloom_bench.exs  cms_bench.exs  cqf_bench.exs  cuckoo_bench.exs  ddsketch_bench.exs  filter_chain_bench.exs  frequent_items_bench.exs  hhl_v_naive.exs  hll_bench.exs  hll_hot_path_bench.exs  hll_v_mapset.livemd  iblt_bench.exs  kll_bench.exs  merge_throughput_bench.exs  misra_gries_bench.exs  persistence_bench.exs  quotient_bench.exs  req_bench.exs  run.exs  serialization_bench.exs  stream_ingestion_bench.exs  theta_bench.exs  ull_bench.exs  update_many_chunk_bench.exs  xor_filter_bench.exs  xxhash3_bench.exs
ci/: README.md  bench_baseline.json  compare_bench.exs  compare_coverage.exs  coverage_baseline.json  coverage_baseline_rust.json  gen_bench_baseline.exs
config/: config.exs
docs/: after-0.5.0.md  data_sketches-1.md  frequent_items_format.md
guides/: aggregation_wall.md  broadway_integration.md  distributed_merge_semantics.md  flow_integration.md  genstage_integration.md  hash_strategies.md  hll_performance.md  integrations.md  livebooks.md  observability.md  (+10 more)
native/ex_data_sketch_nif/: Cargo.toml  Cross.toml
native/ex_data_sketch_nif/.cargo/: config.toml
native/ex_data_sketch_nif/src/: bloom.rs  cms.rs  cqf.rs  crc.rs  cuckoo.rs  ddsketch.rs  error.rs  fi.rs  hash.rs  hll.rs  iblt.rs  kll.rs  lib.rs  quotient.rs  quotient_core.rs  theta.rs  ull.rs  xor_filter.rs
(+183 files in other folders)
