[package]
name = "ex_data_sketch_nif"
version = "0.4.0"
edition = "2021"

[lib]
name = "ex_data_sketch_nif"
path = "src/lib.rs"
crate-type = ["cdylib"]

[features]
default = ["nif_version_2_16"]
nif_version_2_16 = ["rustler/nif_version_2_16"]
nif_version_2_17 = ["rustler/nif_version_2_17"]

[dependencies]
rustler = { version = "0.36", default-features = false, features = ["derive"] }
xxhash-rust = { version = "0.8", features = ["xxh3"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
